-Improviments: corrections in metods deprecated