@@ -16,80 +16,68 @@ import javax.swing.KeyStroke;
 import javax.swing.SwingUtilities;
 import net.atlanticbb.tantlinger.ui.text.dialogs.TextFinderDialog;
 
+public class FindReplaceAction extends BasicEditAction {
 
-public class FindReplaceAction extends BasicEditAction
-{
     /**
-     * 
+     *
      */
     private static final long serialVersionUID = 1L;
-    private final boolean isReplaceTab;    
+    private final boolean isReplaceTab;
     private TextFinderDialog dialog;
     private final boolean showHTML;
-        
-    
-    public FindReplaceAction(boolean isReplace, boolean _showHTML)
-    {
+
+    public FindReplaceAction(boolean isReplace, boolean _showHTML) {
         super(null);
         showHTML = _showHTML;
-        if(isReplace)
-        {           
+        if (isReplace) {
             putValue(NAME, i18n.str("replace_")); //$NON-NLS-1$
-            putValue(MNEMONIC_KEY, new Integer(i18n.mnem("replace_")));
-        }
-        else
-        {           
+            putValue(MNEMONIC_KEY, Integer.valueOf(i18n.mnem("replace_")));
+        } else {
             putValue(NAME, i18n.str("find_")); //$NON-NLS-1$
-            putValue(MNEMONIC_KEY, new Integer(i18n.mnem("find_")));
+            putValue(MNEMONIC_KEY, Integer.valueOf(i18n.mnem("find_")));
             putValue(ACCELERATOR_KEY,
-                KeyStroke.getKeyStroke(KeyEvent.VK_F, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
+                    KeyStroke.getKeyStroke(KeyEvent.VK_F, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
         }
-                
+
         isReplaceTab = isReplace;
     }
 
     /* (non-Javadoc)
      * @see net.atlanticbb.tantlinger.ui.text.actions.BasicEditAction#doEdit(java.awt.event.ActionEvent, javax.swing.JEditorPane)
      */
-    protected void doEdit(ActionEvent e, JEditorPane textComponent)
-    {
-        Component c = SwingUtilities.getWindowAncestor(textComponent);  
-        if(dialog == null)
-        {
-            if(c instanceof Frame)
-            {           
-                if(isReplaceTab)
-                dialog = new TextFinderDialog((Frame)c, textComponent, TextFinderDialog.REPLACE);
-                else
-                dialog = new TextFinderDialog((Frame)c, textComponent, TextFinderDialog.FIND);
-            }
-            else if(c instanceof Dialog)
-            {           
-                if(isReplaceTab)
-                dialog = new TextFinderDialog((Dialog)c, textComponent, TextFinderDialog.REPLACE);
-                else
-                dialog = new TextFinderDialog((Dialog)c, textComponent, TextFinderDialog.FIND);
-            }
-            else 
+    @Override
+    protected void doEdit(ActionEvent e, JEditorPane textComponent) {
+        Component c = SwingUtilities.getWindowAncestor(textComponent);
+        if (dialog == null) {
+            if (c instanceof Frame frame) {
+                if (isReplaceTab) {
+                    dialog = new TextFinderDialog(frame, textComponent, TextFinderDialog.REPLACE);
+                } else {
+                    dialog = new TextFinderDialog(frame, textComponent, TextFinderDialog.FIND);
+                }
+            } else if (c instanceof Dialog dialog1) {
+                if (isReplaceTab) {
+                    dialog = new TextFinderDialog(dialog1, textComponent, TextFinderDialog.REPLACE);
+                } else {
+                    dialog = new TextFinderDialog(dialog1, textComponent, TextFinderDialog.FIND);
+                }
+            } else {
                 return;
+            }
         }
-        
+
         //if(textComponent.getSelectionStart() != textComponent.getSelectionEnd())
         //  dialog.setSearchText(textComponent.getSelectedText());
-        
-        if(!dialog.isVisible())
-        {
+        if (!dialog.isVisible()) {
             dialog.show((isReplaceTab) ? TextFinderDialog.REPLACE : TextFinderDialog.FIND);
         }
     }
-    
+
     @Override
-    protected void updateContextState(JEditorPane editor)
-    {
-        if(dialog != null)
-        {
+    protected void updateContextState(JEditorPane editor) {
+        if (dialog != null) {
             dialog.setJTextComponent(editor);
         }
     }
-    
+
 }
