@@ -28,75 +28,66 @@ import net.atlanticbb.tantlinger.ui.text.HTMLUtils;
 import org.bushe.swing.action.ActionManager;
 import org.bushe.swing.action.ShouldBeEnabledDelegate;
 
-
 /**
  * @author Bob Tantlinger
  *
  */
-public class PasteFormattedAction extends HTMLTextEditAction
-{    
+public class PasteFormattedAction extends HTMLTextEditAction {
+
     private static final long serialVersionUID = 1L;
 
-    
     /**
      * @param name
      */
-    public PasteFormattedAction()
-    {
-        
+    public PasteFormattedAction() {
+
         super(i18n.str("paste_formatted"));
-        putValue(MNEMONIC_KEY, new Integer(i18n.mnem("paste_formatted")));
+        putValue(MNEMONIC_KEY, Integer.valueOf(i18n.mnem("paste_formatted")));
         putValue(SMALL_ICON, UIUtils.getIcon(UIUtils.X16, "paste.png"));
         putValue(ActionManager.LARGE_ICON, UIUtils.getIcon(UIUtils.X24, "paste.png"));
-        putValue(ACCELERATOR_KEY,KeyStroke.getKeyStroke("shift ctrl V"));
-        addShouldBeEnabledDelegate(new ShouldBeEnabledDelegate()
-        {
-            public boolean shouldBeEnabled(Action a)
-            {                          
-                if(getCurrentEditor() == null)
-                    return false;
-                
-                Transferable content = 
-                    Toolkit.getDefaultToolkit().getSystemClipboard().getContents(PasteFormattedAction.this);
-                
-                if(content == null)
-                    return false;
-                DataFlavor flv = DataFlavor.selectBestTextFlavor(content.getTransferDataFlavors());
-                return flv != null && flv.getMimeType().startsWith("text/html");
+        putValue(ACCELERATOR_KEY, KeyStroke.getKeyStroke("shift ctrl V"));
+        addShouldBeEnabledDelegate((Action a) -> {
+            if (getCurrentEditor() == null) {
+                return false;
             }
+
+            Transferable content
+                    = Toolkit.getDefaultToolkit().getSystemClipboard().getContents(PasteFormattedAction.this);
+
+            if (content == null) {
+                return false;
+            }
+            DataFlavor flv = DataFlavor.selectBestTextFlavor(content.getTransferDataFlavors());
+            return flv != null && flv.getMimeType().startsWith("text/html");
         });
-        
+
         putValue(Action.SHORT_DESCRIPTION, getValue(Action.NAME));
-        
+
     }
-    
-    protected void updateWysiwygContextState(JEditorPane wysEditor)
-    {
+
+    @Override
+    protected void updateWysiwygContextState(JEditorPane wysEditor) {
         this.updateEnabledState();
     }
-    
-    protected void updateSourceContextState(JEditorPane srcEditor)
-    {
+
+    @Override
+    protected void updateSourceContextState(JEditorPane srcEditor) {
         this.updateEnabledState();
     }
 
     /* (non-Javadoc)
      * @see net.atlanticbb.tantlinger.ui.text.actions.HTMLTextEditAction#sourceEditPerformed(java.awt.event.ActionEvent, javax.swing.JEditorPane)
      */
-    protected void sourceEditPerformed(ActionEvent e, JEditorPane editor)
-    {        
-        String htmlFragment = null;        
-        try
-        {
+    @Override
+    protected void sourceEditPerformed(ActionEvent e, JEditorPane editor) {
+        String htmlFragment = null;
+        try {
             htmlFragment = getHTMLFragment();
-        }
-        catch(Exception ex)
-        {
+        } catch (UnsupportedFlavorException | IOException ex) {
             ex.printStackTrace();
         }
-        
-        if(htmlFragment != null)
-        {
+
+        if (htmlFragment != null) {
             CompoundUndoManager.beginCompoundEdit(editor.getDocument());
             editor.replaceSelection(htmlFragment);
             CompoundUndoManager.endCompoundEdit(editor.getDocument());
@@ -106,71 +97,64 @@ public class PasteFormattedAction extends HTMLTextEditAction
     /* (non-Javadoc)
      * @see net.atlanticbb.tantlinger.ui.text.actions.HTMLTextEditAction#wysiwygEditPerformed(java.awt.event.ActionEvent, javax.swing.JEditorPane)
      */
-    protected void wysiwygEditPerformed(ActionEvent e, JEditorPane editor)
-    {       
-        String htmlFragment = null;        
-        try
-        {
+    @Override
+    protected void wysiwygEditPerformed(ActionEvent e, JEditorPane editor) {
+        String htmlFragment = null;
+        try {
             htmlFragment = getHTMLFragment();
-        }
-        catch(Exception ex)
-        {
+        } catch (UnsupportedFlavorException | IOException ex) {
             ex.printStackTrace();
         }
-        
-        if(htmlFragment != null)
-        {
+
+        if (htmlFragment != null) {
             CompoundUndoManager.beginCompoundEdit(editor.getDocument());
             //HTMLUtils.insertHTML("<div>" + htmlFragment + "</div>", HTML.Tag.DIV, editor);
-            HTMLUtils.insertArbitraryHTML(htmlFragment, editor);            
+            HTMLUtils.insertArbitraryHTML(htmlFragment, editor);
             CompoundUndoManager.endCompoundEdit(editor.getDocument());
-        }        
+        }
     }
-    
-    
-    
+
     /**
      * Get the HTML text from the content if any
      *
      * @return returns the html fragment, or null if this content isn't HTML
-     * @throws UnsupportedFlavorException 
-     * @throws IOException 
+     * @throws UnsupportedFlavorException
+     * @throws IOException
      */
-    private String getHTMLFragment() throws IOException, UnsupportedFlavorException
-    {
+    private String getHTMLFragment() throws IOException, UnsupportedFlavorException {
         Clipboard clip = Toolkit.getDefaultToolkit().getSystemClipboard();
         Transferable c = clip.getContents(this);
-        if(c == null)
-            return null;                
-        
-        DataFlavor flv = DataFlavor.selectBestTextFlavor(c.getTransferDataFlavors());        
-        if(!flv.getMimeType().startsWith("text/html"))
-            return null;        
-        
+        if (c == null) {
+            return null;
+        }
+
+        DataFlavor flv = DataFlavor.selectBestTextFlavor(c.getTransferDataFlavors());
+        if (!flv.getMimeType().startsWith("text/html")) {
+            return null;
+        }
+
         String text = read((flv.getReaderForText(c)));
-        
+
         //when html content is retrieved from the transferable, the copied part
         //is enclosed in a <body> tag, so only get the contents we want...
         int flags = Pattern.CASE_INSENSITIVE | Pattern.UNICODE_CASE;
         Pattern p = Pattern.compile(("<\\s*body\\b([^<>]*)>"), flags);
         Matcher m = p.matcher(text);
-        if(m.find())
-        {           
-            text = text.substring(m.end(), text.length());          
+        if (m.find()) {
+            text = text.substring(m.end(), text.length());
         }
-        
+
         p = Pattern.compile("<\\s*/\\s*body\\s*>", flags);
         m = p.matcher(text);
-        if(m.find())
-        {
+        if (m.find()) {
             text = text.substring(0, m.start());
-        }        
-        
+        }
+
         //when html content is retrieved from the transferable, the copied part
         //is surrounded with the comments <!--StartFragment--> and <!--EndFragment--> on windows        
         text = text.replaceAll("<\\!\\-\\-StartFragment\\-\\->", "");
         text = text.replaceAll("<\\!\\-\\-EndFragment\\-\\->", "");
-        
+
         //gets rid of 'class' and 'id' attributes in the tags.
         //It really doesn't make much sense to include these attribs in HTML
         //pasted in from the wild.
@@ -181,37 +165,29 @@ public class PasteFormattedAction extends HTMLTextEditAction
         text = m.replaceAll("<$1$2>");
         m = p.matcher(text);
         text = m.replaceAll("<$1$2>");
-                
+
         return text;
-    } 
-    
-    public String read(Reader input) throws IOException
-    {
+    }
+
+    public String read(Reader input) throws IOException {
         BufferedReader reader = new BufferedReader(input);
-        StringBuffer sb = new StringBuffer();
+        StringBuilder sb = new StringBuilder();
         int ch;
 
-        try
-        {
-            while((ch = reader.read()) != -1)
-            {
+        try {
+            while ((ch = reader.read()) != -1) {
                 //System.err.print((char)ch);
-                sb.append((char)ch);
+                sb.append((char) ch);
             }
-        }
-        catch(IOException ex)
-        {
+        } catch (IOException ex) {
             throw ex;
-        }
-        finally
-        {
-            try
-            {
+        } finally {
+            try {
                 reader.close();
+            } catch (IOException ioe) {
             }
-            catch(IOException ioe){}
         }
-        
+
         return sb.toString();
     }
 
