@@ -2,7 +2,6 @@ package net.atlanticbb.tantlinger.ui.text.actions;
 
 import java.awt.Toolkit;
 import java.awt.event.ActionEvent;
-import java.awt.event.InputEvent;
 import java.awt.event.KeyEvent;
 
 import javax.swing.Action;
@@ -24,7 +23,7 @@ public class SelectAllAction extends BasicEditAction
     public SelectAllAction()
     {
         super(i18n.str("select_all"));
-        putValue(MNEMONIC_KEY, new Integer(i18n.mnem("select_all")));
+        putValue(MNEMONIC_KEY, Integer.valueOf(i18n.mnem("select_all")));
         
         putValue(ACCELERATOR_KEY, 
             KeyStroke.getKeyStroke(KeyEvent.VK_A, Toolkit.getDefaultToolkit().getMenuShortcutKeyMask()));
@@ -35,6 +34,7 @@ public class SelectAllAction extends BasicEditAction
     /* (non-Javadoc)
      * @see net.atlanticbb.tantlinger.ui.text.actions.BasicEditAction#doEdit(java.awt.event.ActionEvent, javax.swing.JEditorPane)
      */
+    @Override
     protected void doEdit(ActionEvent e, JEditorPane editor)
     {
         editor.selectAll();
