@@ -13,11 +13,10 @@ import javax.swing.SpinnerNumberModel;
 
 import java.util.*;
 
-public class CellAttributesPanel extends HTMLAttributeEditorPanel
-{
+public final class CellAttributesPanel extends HTMLAttributeEditorPanel {
 
     /**
-     * 
+     *
      */
     private static final long serialVersionUID = 1L;
     private AlignmentAttributesPanel alignPanel = null;
@@ -34,108 +33,90 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
     /**
      * This is the default constructor
      */
-    public CellAttributesPanel()
-    {
-        this(new Hashtable());
+    public CellAttributesPanel() {
+        this(new HashMap<>());
     }
-    
-    public CellAttributesPanel(Hashtable attr)
-    {
+
+    public CellAttributesPanel(HashMap attr) {
         super(attr);
         initialize();
         alignPanel.setAttributes(getAttributes());
         sizePanel.setAttributes(getAttributes());
-        updateComponentsFromAttribs(); 
+        updateComponentsFromAttribs();
     }
-    
-    public void updateComponentsFromAttribs()
-    {
+
+    @Override
+    public void updateComponentsFromAttribs() {
         alignPanel.updateComponentsFromAttribs();
         sizePanel.updateComponentsFromAttribs();
-        
-        if(attribs.containsKey("colspan")) //$NON-NLS-1$
+
+        if (attribs.containsKey("colspan")) //$NON-NLS-1$
         {
             colSpanCB.setSelected(true);
             colSpanField.setEnabled(true);
-            try
-            {
-                colSpanField.getModel().setValue(
-                    new Integer(attribs.get("colspan").toString())); //$NON-NLS-1$
-            }
-            catch(Exception ex)
-            {
+            try {
+                colSpanField.getModel().setValue(Integer.valueOf(attribs.get("colspan").toString())); //$NON-NLS-1$
+            } catch (NumberFormatException ex) {
                 ex.printStackTrace();
             }
-        }
-        else
-        {
+        } else {
             colSpanCB.setSelected(false);
             colSpanField.setEnabled(false);
         }
-        
-        if(attribs.containsKey("rowspan")) //$NON-NLS-1$
+
+        if (attribs.containsKey("rowspan")) //$NON-NLS-1$
         {
             rowSpanCB.setSelected(true);
             rowSpanField.setEnabled(true);
-            try
-            {
-                rowSpanField.getModel().setValue(
-                    new Integer(attribs.get("rowspan").toString())); //$NON-NLS-1$
-            }
-            catch(Exception ex)
-            {
+            try {
+                rowSpanField.getModel().setValue(Integer.valueOf(attribs.get("rowspan").toString())); //$NON-NLS-1$
+            } catch (NumberFormatException ex) {
                 ex.printStackTrace();
             }
-        }
-        else
-        {
+        } else {
             rowSpanCB.setSelected(false);
             rowSpanField.setEnabled(false);
         }
-        
-        if(attribs.containsKey("bgcolor")) //$NON-NLS-1$
+
+        if (attribs.containsKey("bgcolor")) //$NON-NLS-1$
         {
             bgColorPanel.setSelected(true);
             bgColorPanel.setColor(attribs.get("bgcolor").toString()); //$NON-NLS-1$
-        }
-        else
-        {
+        } else {
             bgColorPanel.setSelected(false);
         }
-        
+
         dontWrapCB.setSelected(attribs.containsKey("nowrap"));  //$NON-NLS-1$
     }
-    
-    
-    public void updateAttribsFromComponents()
-    {        
+
+    @Override
+    public void updateAttribsFromComponents() {
         alignPanel.updateAttribsFromComponents();
         sizePanel.updateAttribsFromComponents();
-        if(dontWrapCB.isSelected())
+        if (dontWrapCB.isSelected()) {
             attribs.put("nowrap", "nowrap"); //$NON-NLS-1$ //$NON-NLS-2$
-        else
+        } else {
             attribs.remove("nowrap"); //$NON-NLS-1$
-        
-        if(bgColorPanel.isSelected())
+        }
+        if (bgColorPanel.isSelected()) {
             attribs.put("bgcolor", bgColorPanel.getColor()); //$NON-NLS-1$
-        else
+        } else {
             attribs.remove("bgcolor"); //$NON-NLS-1$
-        
-        if(colSpanCB.isSelected())
+        }
+        if (colSpanCB.isSelected()) {
             attribs.put("colspan", colSpanField.getModel().getValue().toString()); //$NON-NLS-1$
-        else
+        } else {
             attribs.remove("colspan"); //$NON-NLS-1$
-        
-        if(rowSpanCB.isSelected())
+        }
+        if (rowSpanCB.isSelected()) {
             attribs.put("rowspan", rowSpanField.getModel().getValue().toString()); //$NON-NLS-1$
-        else
+        } else {
             attribs.remove("rowspan"); //$NON-NLS-1$
+        }
     }
-    
 
-    
-    public void setAttributes(Map attr)
-    {
+    @Override
+    public void setAttributes(Map attr) {
         alignPanel.setAttributes(attr);
         sizePanel.setAttributes(attr);
         super.setAttributes(attr);
@@ -143,11 +124,10 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
 
     /**
      * This method initializes this
-     * 
+     *
      * @return void
      */
-    private void initialize()
-    {
+    private void initialize() {
         GridBagConstraints gridBagConstraints31 = new GridBagConstraints();
         gridBagConstraints31.gridx = 0;
         gridBagConstraints31.gridwidth = 3;
@@ -160,7 +140,7 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
         gridBagConstraints21.gridheight = 2;
         gridBagConstraints21.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints21.fill = java.awt.GridBagConstraints.HORIZONTAL;
-        gridBagConstraints21.insets = new java.awt.Insets(0,0,0,5);
+        gridBagConstraints21.insets = new java.awt.Insets(0, 0, 0, 5);
         gridBagConstraints21.gridy = 1;
         GridBagConstraints gridBagConstraints3 = new GridBagConstraints();
         gridBagConstraints3.gridx = 1;
@@ -170,73 +150,66 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
         GridBagConstraints gridBagConstraints2 = new GridBagConstraints();
         gridBagConstraints2.gridx = 1;
         gridBagConstraints2.anchor = java.awt.GridBagConstraints.SOUTHWEST;
-        gridBagConstraints2.insets = new java.awt.Insets(0,0,5,0);
+        gridBagConstraints2.insets = new java.awt.Insets(0, 0, 5, 0);
         gridBagConstraints2.gridwidth = 2;
         gridBagConstraints2.gridy = 1;
         GridBagConstraints gridBagConstraints1 = new GridBagConstraints();
         gridBagConstraints1.gridx = 1;
         gridBagConstraints1.anchor = java.awt.GridBagConstraints.WEST;
         gridBagConstraints1.weightx = 1.0;
-        gridBagConstraints1.insets = new java.awt.Insets(0,0,5,0);
+        gridBagConstraints1.insets = new java.awt.Insets(0, 0, 5, 0);
         gridBagConstraints1.gridy = 0;
         GridBagConstraints gridBagConstraints = new GridBagConstraints();
         gridBagConstraints.gridx = 0;
         gridBagConstraints.anchor = java.awt.GridBagConstraints.WEST;
-        gridBagConstraints.insets = new java.awt.Insets(0,0,5,5);
+        gridBagConstraints.insets = new java.awt.Insets(0, 0, 5, 5);
         gridBagConstraints.gridwidth = 1;
         gridBagConstraints.gridy = 0;
         this.setLayout(new GridBagLayout());
         this.setSize(420, 200);
-        this.setPreferredSize(new java.awt.Dimension(410,200));
+        this.setPreferredSize(new java.awt.Dimension(410, 200));
         this.add(getAlignPanel(), gridBagConstraints);
         this.add(getSizePanel(), gridBagConstraints1);
         this.add(getDontWrapCB(), gridBagConstraints2);
         this.add(getBgColorPanel(), gridBagConstraints3);
         this.add(getSpanPanel(), gridBagConstraints21);
         this.add(getExpansionPanel(), gridBagConstraints31);
-        
-        
+
     }
 
     /**
-     * This method initializes alignPanel	
-     * 	
-     * @return javax.swing.JPanel	
+     * This method initializes alignPanel
+     *
+     * @return javax.swing.JPanel
      */
-    private AlignmentAttributesPanel getAlignPanel()
-    {
-        if(alignPanel == null)
-        {
+    private AlignmentAttributesPanel getAlignPanel() {
+        if (alignPanel == null) {
             alignPanel = new AlignmentAttributesPanel();
-            alignPanel.setPreferredSize(new java.awt.Dimension(180,95));
-            
+            alignPanel.setPreferredSize(new java.awt.Dimension(180, 95));
+
         }
         return alignPanel;
     }
 
     /**
-     * This method initializes sizePanel	
-     * 	
-     * @return javax.swing.JPanel	
+     * This method initializes sizePanel
+     *
+     * @return javax.swing.JPanel
      */
-    private JPanel getSizePanel()
-    {
-        if(sizePanel == null)
-        {
+    private JPanel getSizePanel() {
+        if (sizePanel == null) {
             sizePanel = new SizeAttributesPanel();
         }
         return sizePanel;
     }
 
     /**
-     * This method initializes dontWrapCB	
-     * 	
-     * @return javax.swing.JCheckBox	
+     * This method initializes dontWrapCB
+     *
+     * @return javax.swing.JCheckBox
      */
-    private JCheckBox getDontWrapCB()
-    {
-        if(dontWrapCB == null)
-        {
+    private JCheckBox getDontWrapCB() {
+        if (dontWrapCB == null) {
             dontWrapCB = new JCheckBox();
             dontWrapCB.setText(i18n.str("dont_wrap_text")); //$NON-NLS-1$
         }
@@ -244,28 +217,24 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
     }
 
     /**
-     * This method initializes bgColorPanel	
-     * 	
-     * @return javax.swing.JPanel	
+     * This method initializes bgColorPanel
+     *
+     * @return javax.swing.JPanel
      */
-    private BGColorPanel getBgColorPanel()
-    {
-        if(bgColorPanel == null)
-        {
+    private BGColorPanel getBgColorPanel() {
+        if (bgColorPanel == null) {
             bgColorPanel = new BGColorPanel();
         }
         return bgColorPanel;
     }
 
     /**
-     * This method initializes spanPanel	
-     * 	
-     * @return javax.swing.JPanel	
+     * This method initializes spanPanel
+     *
+     * @return javax.swing.JPanel
      */
-    private JPanel getSpanPanel()
-    {
-        if(spanPanel == null)
-        {
+    private JPanel getSpanPanel() {
+        if (spanPanel == null) {
             GridBagConstraints gridBagConstraints7 = new GridBagConstraints();
             gridBagConstraints7.fill = java.awt.GridBagConstraints.NONE;
             gridBagConstraints7.gridy = 1;
@@ -282,16 +251,16 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
             gridBagConstraints5.gridx = 0;
             gridBagConstraints5.anchor = java.awt.GridBagConstraints.WEST;
             gridBagConstraints5.gridheight = 1;
-            gridBagConstraints5.insets = new java.awt.Insets(0,0,0,0);
+            gridBagConstraints5.insets = new java.awt.Insets(0, 0, 0, 0);
             gridBagConstraints5.gridy = 1;
             GridBagConstraints gridBagConstraints4 = new GridBagConstraints();
             gridBagConstraints4.gridx = 0;
             gridBagConstraints4.anchor = java.awt.GridBagConstraints.WEST;
-            gridBagConstraints4.insets = new java.awt.Insets(0,0,5,0);
+            gridBagConstraints4.insets = new java.awt.Insets(0, 0, 5, 0);
             gridBagConstraints4.gridy = 0;
             spanPanel = new JPanel();
             spanPanel.setLayout(new GridBagLayout());
-            spanPanel.setBorder(javax.swing.BorderFactory.createCompoundBorder(javax.swing.BorderFactory.createTitledBorder(null, i18n.str("span"), javax.swing.border.TitledBorder.DEFAULT_JUSTIFICATION, javax.swing.border.TitledBorder.DEFAULT_POSITION, null, null), javax.swing.BorderFactory.createEmptyBorder(2,2,2,2))); //$NON-NLS-1$
+            spanPanel.setBorder(javax.swing.BorderFactory.createCompoundBorder(javax.swing.BorderFactory.createTitledBorder(null, i18n.str("span"), javax.swing.border.TitledBorder.DEFAULT_JUSTIFICATION, javax.swing.border.TitledBorder.DEFAULT_POSITION, null, null), javax.swing.BorderFactory.createEmptyBorder(2, 2, 2, 2))); //$NON-NLS-1$
             spanPanel.add(getColSpanCB(), gridBagConstraints4);
             spanPanel.add(getRowSpanCB(), gridBagConstraints5);
             spanPanel.add(getColSpanField(), gridBagConstraints6);
@@ -301,89 +270,71 @@ public class CellAttributesPanel extends HTMLAttributeEditorPanel
     }
 
     /**
-     * This method initializes colSpanCB	
-     * 	
-     * @return javax.swing.JCheckBox	
+     * This method initializes colSpanCB
+     *
+     * @return javax.swing.JCheckBox
      */
-    private JCheckBox getColSpanCB()
-    {
-        if(colSpanCB == null)
-        {
+    private JCheckBox getColSpanCB() {
+        if (colSpanCB == null) {
             colSpanCB = new JCheckBox();
             colSpanCB.setText(i18n.str("colspan")); //$NON-NLS-1$
-            colSpanCB.setPreferredSize(new java.awt.Dimension(85,25));
-            colSpanCB.addItemListener(new java.awt.event.ItemListener()
-            {
-                public void itemStateChanged(java.awt.event.ItemEvent e)
-                {
-                    colSpanField.setEnabled(colSpanCB.isSelected());
-                }
+            colSpanCB.setPreferredSize(new java.awt.Dimension(85, 25));
+            colSpanCB.addItemListener((java.awt.event.ItemEvent e) -> {
+                colSpanField.setEnabled(colSpanCB.isSelected());
             });
         }
         return colSpanCB;
     }
 
     /**
-     * This method initializes rowSpanCB	
-     * 	
-     * @return javax.swing.JCheckBox	
+     * This method initializes rowSpanCB
+     *
+     * @return javax.swing.JCheckBox
      */
-    private JCheckBox getRowSpanCB()
-    {
-        if(rowSpanCB == null)
-        {
+    private JCheckBox getRowSpanCB() {
+        if (rowSpanCB == null) {
             rowSpanCB = new JCheckBox();
             rowSpanCB.setText(i18n.str("rowspan")); //$NON-NLS-1$
-            rowSpanCB.addItemListener(new java.awt.event.ItemListener()
-            {
-                public void itemStateChanged(java.awt.event.ItemEvent e)
-                {
-                    rowSpanField.setEnabled(rowSpanCB.isSelected());
-                }
+            rowSpanCB.addItemListener((java.awt.event.ItemEvent e) -> {
+                rowSpanField.setEnabled(rowSpanCB.isSelected());
             });
         }
         return rowSpanCB;
     }
 
     /**
-     * This method initializes colSpanField	
-     * 	
-     * @return javax.swing.JSpinner	
+     * This method initializes colSpanField
+     *
+     * @return javax.swing.JSpinner
      */
-    private JSpinner getColSpanField()
-    {
-        if(colSpanField == null)
-        {
+    private JSpinner getColSpanField() {
+        if (colSpanField == null) {
             colSpanField = new JSpinner(new SpinnerNumberModel(1, 1, 999, 1));
-            
+
         }
         return colSpanField;
     }
 
     /**
-     * This method initializes rowSpanField	
-     * 	
-     * @return javax.swing.JSpinner	
+     * This method initializes rowSpanField
+     *
+     * @return javax.swing.JSpinner
      */
-    private JSpinner getRowSpanField()
-    {
-        if(rowSpanField == null)
-        {
+    private JSpinner getRowSpanField() {
+        if (rowSpanField == null) {
             rowSpanField = new JSpinner(new SpinnerNumberModel(1, 1, 999, 1));
-            
+
         }
         return rowSpanField;
     }
 
     /**
-     * This method initializes expansionPanel	
-     * 	
-     * @return javax.swing.JPanel	
+     * This method initializes expansionPanel
+     *
+     * @return javax.swing.JPanel
      */
-    private JPanel getExpansionPanel()
-    {
-        if(expansionPanel == null)
-        {
+    private JPanel getExpansionPanel() {
+        if (expansionPanel == null) {
             expansionPanel = new JPanel();
         }
         return expansionPanel;
